--- a/index.html
+++ b/index.html
@@ -2,9 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <!-- debut du SEO -->
+<meta name="title" content="Portfolio de Andy Andria — Développeur Web & Mobile">
+<meta name="description" content="Découvrez mes projets React, Laravel, et React Native. Développeur passionné basé à Madagascar.">
+<meta name="keywords" content="portfolio, développeur, react, laravel, madagascar, web, mobile">
+<meta name="author" content="Andy Andria">
+<meta name="robots" content="index, follow">
+<meta property="og:image" content="https://andyandria.vercel.app/preview.png">
+<meta name="google-site-verification" content="OPEa4FqxpAMNKeMy7B6agzsNyUCzK7q1ePGvoaARzx0" />
+
+    <!-- fin du SEO -->
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Andy Andria | Développeur Fullstack React & Laravel</title>
   </head>
   <body>
     <div id="root"></div>
